src/test/ui/generics/generic-impl-more-params-with-defaults.stderr
error[E0107]: wrong number of type arguments: expected at most 2, found 3
  --> $DIR/generic-impl-more-params-with-defaults.rs:13:24
   |
LL |     Vec::<isize, Heap, bool>::new();
   |                        ^^^^ unexpected type argument

error: aborting due to previous error

For more information about this error, try `rustc --explain E0107`.
